** 1.3.10 (2015-28-09 Пн)
- initialize with params for yml file
- check conditions @params['conditions'] or conditions.yml
- delete module conditions
- delete pluraform ...
- delete accessor params ...
** 1.2.10 (2015-03-11 Ср)
- say without params
- attr_accessor params
- add specs and modules
** 1.1.10 (2015-02-21 Сб)
- fix expect_if_paplay_now
- translation
** 1.1.9 (2015-01-30 Пт)
- Понижение громкости и возрат с шагом @step
- Добавлена проверка на kodi ...
** 1.1.8 (2015-01-13 Вт)
- удалён change_volume из play_wav
** 1.1.7 (2015-01-10 Сб)
- Добавлена проверка на vlc и xbmc
- aplay заменен на paplay
** 1.0.7 (2015-01-07 Ср)
- Фикс min и max volume ...
** 1.0.6 (2015-01-07 Ср)
- Рефакторинг
** 1.0.5 (2015-01-05 Пн)
- Фикс паузы перед проигрыванием
** 1.0.4 (2015-01-03 Сб)
- Улучшена адаптивная громкость
- Добавлено управление @params[:down_volume] = [min, max, step]
- Добавлен параметр @params[:backlight] (не проверять подсветку)
** 1.0.3 (2015-01-03 Сб)
- Добавлена плавающая громкость
- Понижение громкости у всех других источников (pulseaudio)
** 0.0.3 (2015-01-01 Чт)
- Фикс получения @current_volume
- :lang = "voice_msu_ru_nsh_clunits" (без скобок)
** 0.0.2 (2015-01-01 Чт)
- Мелкие фиксы...
** 0.0.1 (2014-12-31 Ср)
- Первая стабильная версия