@@ -11,10 +11,12 @@ class Fest
   include Volume
 
   def say(string)
-    check_conditions
-    make_wav(string)
-    expect_if_paplay_now
-    play_wav
+    unless string.nil? || string.empty?
+      check_conditions
+      make_wav(string)
+      expect_if_paplay_now
+      play_wav
+    end
   end
 
   def initialize(params = {})
@@ -53,7 +55,7 @@ class Fest
     optimize_volume
     sink_inputs
     change_volume(@current_volume, @volume, @step)
-    system("paplay #{@path}/say_#{@index}.wav --no-remix --no-remap \
+    system("paplay #{@path}/say_#{@index}.wav \
       --volume='#{@optimize_volume * 655}' > /dev/null 2>&1")
     change_volume(@volume, @current_volume, @step)
     delete_wav
